# rinha-backend-django

./: .env  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  lab_times.py  manage.py  nginx.conf  pgbouncer.ini  pyproject.toml  requirements.txt  script.sql
conta_corrente/: __init__.py  admin.py  apps.py  exception.py  models.py  serializers.py  services.py  tests.py  url.py  urls.py  views.py
conta_corrente/migrations/: 0001_initial.py  0002_alter_transacao_valor.py
rinha_backend/: asgi.py  redis.py  settings.py  urls.py  wsgi.py
