[tool.poetry]
name = "rinha-backend"
version = "0.1.0"
description = ""
authors = ["Julio Cezar Riffel <<julioriffel@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.3"
gunicorn = "21.2.0"
psycopg = "3.1.18"
redis = "5.0.1"
uvicorn = "0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
